fix(section-jump): deterministic heading source selection and cleaner wrapped links

--- a/_sass/_lab-redesign.scss
+++ b/_sass/_lab-redesign.scss
@@ -372,7 +372,7 @@ h6,
     color: var(--global-theme-color);
     text-decoration: none;
     line-height: 1.5;
-    text-align: center;
+    text-align: left;
 
     &:hover {
       color: var(--global-hover-color);
@@ -382,9 +382,10 @@ h6,
   }
 
   &__link--subsection {
-    font-size: 0.8rem;
+    font-size: 0.79rem;
     color: var(--global-text-color-light);
-    padding-left: 0.3rem;
+    opacity: 0.86;
+    font-weight: 500;
   }
 
   @media (max-width: 768px) {
